# tAI

./: .env  .gitignore  dkjfsdf  main.js  package-lock.json  package.json  pyproject.toml  pytest.ini
Extra/: main.js
backend/: Seed_Database.py  dependencies.py  exceptions.py  main.py  models.py  path_fetch.py  seed_data.json  test_data.json
backend/database/: assignment.py  chat.py  classroom.py  day.py  material.py  module.py  schema.py  student.py  teacher.py  unit.py
backend/routers/: assignment.py  chat.py  classroom.py  day.py  home.py  material.py  module.py  student.py  teacher.py  unit.py
backend/tests/: conftest.py  test_students.py
tai-backend/: main.py
tai-backend/Database/: db.py  models.py
tai-frontend/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
tai-frontend/public/: index.html
tai-frontend/src/: API.js  App.css  App.js  api.js  pdf.worker.js
tai-frontend/src/CSS/: Buttons.css  CardLayouts.css  Chat.css  Grids.css  Headers.css  JoinClass.css  ModulePage.css
tai-frontend/src/cards/: Cards.css  TitleCard.js
tai-frontend/src/components/: ChatFeature.js  ChatFeature.jsx  ClassCard.js  ClassCard.jsx  Components.css  DayComponent.js  DayComponent.jsx  ModuleCard.js  ModuleComponent.js  ModuleComponent.jsx  TitleCard.js  UnitCard.js  UnitCard.jsx
tai-frontend/src/components/animations/: GradientScroll.jsx  TitleHeading.js  (+1 more)
tai-frontend/src/hooks/: useUser.js
tai-frontend/src/pages/: HomePage.js  LoginPage.js  Pages.css
uploads/assignment/2/: lab1.docx  ~$lab1.docx
uploads/material/1/: pemdas.txt
(+48 files in other folders)
